# trust23-metsafe24

./: README.md  main  main.c
mpk-library/: CMakeLists.txt  allocator.c  allocator.h  mpk.h  threads.h
mpk-library/rust-lib/: Cargo.toml
mpk-library/rust-lib/src/: lib.rs  shadow_memory.rs  wrapper.rs
poc/smallvec-poc/: Cargo.toml  run.sh
poc/smallvec-poc/mir_dump/: smallvec_poc.main-promoted[0].003-000.NoLandingPads.after.mir  smallvec_poc.main-promoted[0].003-000.NoLandingPads.before.mir  smallvec_poc.main-promoted[0].003-001.SimplifyBranches-initial.after.mir  smallvec_poc.main-promoted[0].003-001.SimplifyBranches-initial.before.mir  smallvec_poc.main-promoted[0].003-002.RemoveNoopLandingPads.after.mir  smallvec_poc.main-promoted[0].003-002.RemoveNoopLandingPads.before.mir  smallvec_poc.main-promoted[0].003-003.CleanupNonCodegenStatements.after.mir  smallvec_poc.main-promoted[0].003-003.CleanupNonCodegenStatements.before.mir  smallvec_poc.main-promoted[0].003-004.SimplifyCfg-early-opt.after.mir  smallvec_poc.main-promoted[0].003-004.SimplifyCfg-early-opt.before.mir  smallvec_poc.main-promoted[0].003-005.AddCallGuards.after.mir  smallvec_poc.main-promoted[0].003-005.AddCallGuards.before.mir  smallvec_poc.main-promoted[0].003-006.ElaborateDrops.after.mir  smallvec_poc.main-promoted[0].003-006.ElaborateDrops.before.mir  smallvec_poc.main-promoted[0].003-007.NoLandingPads.after.mir  smallvec_poc.main-promoted[0].003-007.NoLandingPads.before.mir  smallvec_poc.main-promoted[0].003-008.AddMovesForPackedDrops.after.mir  smallvec_poc.main-promoted[0].003-008.AddMovesForPackedDrops.before.mir  smallvec_poc.main-promoted[0].003-009.AddRetag.after.mir  smallvec_poc.main-promoted[0].003-009.AddRetag.before.mir  smallvec_poc.main-promoted[0].003-010.SimplifyCfg-elaborate-drops.after.mir  (+489 more)
poc/smallvec-poc/src/: main.rs
(+261 files in other folders)
