[package]
name = "rust-lib"
version = "0.1.0"
edition = "2018"

[lib]
name = "rustfuncs"
crate-type = ["staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
psm ={ path = "psm", version = "0.1.7"}
cfg-if = "1.0.0"

[build-dependencies]
cc = "1.0.2"
